test/precedence-2.ktn
infix_right 0x01 ***
def *** (a a -> a): drop
